kubernetes/pods/troubleshoot-container-istio/istio-egress.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: allow-egress-http
spec:
  hosts:
  - "*"
  ports:
  - number: 80
    name: http
    protocol: HTTP
  - number: 443
    name: https
    protocol: HTTPS

---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: allow-egress-redis
spec:
  hosts:
  - "redis-10155.c11.us-east-1-3.ec2.cloud.redislabs.com"
  ports:
  - number: 10155
    name: redis
    protocol: TCP
